--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://lukwys.github.io/tumblr2/",
   "dependencies": {
+    "date-fns": "^1.29.0",
     "node-sass": "^4.10.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
