--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://lukwys.github.io/tumblr2/",
   "dependencies": {
+    "bootstrap": "^4.2.1",
     "date-fns": "^1.29.0",
     "node-sass": "^4.10.0",
     "prop-types": "^15.6.2",
@@ -11,6 +12,7 @@
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
+    "reactstrap": "^6.5.0",
     "serve": "^10.0.2"
   },
   "scripts": {
