--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/plugin-proposal-decorators": "^7.3.0",
-    "@craco/craco": "^3.4.0",
+    "bootstrap": "^4.2.1",
     "date-fns": "^1.30.1",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
@@ -16,10 +15,13 @@
     "reactstrap": "^7.1.0"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "node ./scripts/deploy.js",
+    "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "eslintConfig": {
     "extends": "react-app"
