--- a/package.json
+++ b/package.json
@@ -2,19 +2,21 @@
   "name": "tumblr2",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lukwys.github.io/tumblr2/",
   "dependencies": {
     "bootstrap": "^4.2.1",
-    "date-fns": "^1.30.1",
-    "mobx": "^5.9.0",
-    "mobx-react": "^5.4.3",
-    "node-sass": "^4.11.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "date-fns": "^1.29.0",
+    "node-sass": "^4.10.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
-    "reactstrap": "^7.1.0"
+    "react-scripts": "2.0.5",
+    "reactstrap": "^6.5.0",
+    "serve": "^10.0.2"
   },
   "scripts": {
+    "start_serve": "serve",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -31,5 +33,12 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@storybook/addon-actions": "^4.0.4",
+    "@storybook/react": "^4.0.4",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "gh-pages": "^2.0.1"
+  }
 }
