--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "bootstrap": "^4.2.1",
     "date-fns": "^1.29.0",
+    "mobx": "^5.9.0",
+    "mobx-react": "^5.4.3",
     "node-sass": "^4.10.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
